# gozen

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml  gozen.json.schema
crates/gozen_cli/: Cargo.toml
crates/gozen_cli/src/: cache.rs  discovery.rs  lib.rs  main.rs
crates/gozen_cli/src/commands/: baseline.rs  check.rs  ci.rs  explain.rs  format.rs  init.rs  lint.rs  lsp.rs  migrate.rs  mod.rs  utils.rs
crates/gozen_cli/src/reporters/: github.rs  json.rs  mod.rs  text.rs
crates/gozen_cli/tests/: check_test.rs  ci_test.rs  format_test.rs  lint_test.rs
crates/gozen_config/: Cargo.toml
crates/gozen_config/src/: defaults.rs  lib.rs  loader.rs  schema.rs
crates/gozen_diagnostics/: Cargo.toml
crates/gozen_diagnostics/src/: builder.rs  diagnostic.rs  lib.rs  render.rs  severity.rs  span.rs
crates/gozen_formatter/: Cargo.toml
crates/gozen_formatter/src/: collections.rs  control_flow.rs  declarations.rs  format.rs  functions.rs  lib.rs  printer.rs  shader_printer.rs
crates/gozen_formatter/src/rules/: blank_lines.rs  indentation.rs  line_width.rs  mod.rs  spacing.rs
crates/gozen_formatter/tests/: format_fixtures.rs
crates/gozen_linter/: Cargo.toml
crates/gozen_linter/src/: context.rs  engine.rs  fix.rs  lib.rs  rule.rs  shader_rule.rs
crates/gozen_linter/src/rules/: complexity.rs  mod.rs
crates/gozen_linter/src/rules/project/: mod.rs  (+11 more)
crates/gozen_linter/src/shader_rules/: avoid_discard.rs  code_order.rs  cognitive_complexity.rs  comment_spacing.rs  complexity.rs  cyclomatic_complexity.rs  float_literal_style.rs  invalid_render_mode.rs  invalid_shader_type.rs  missing_shader_type.rs  mod.rs  naming_convention.rs  one_statement_per_line.rs  precision_hints.rs  uninitialized_variable.rs  unused_function.rs  unused_uniform.rs  unused_varying.rs
crates/gozen_lsp/: Cargo.toml
crates/gozen_lsp/src/: lib.rs  project_queries.rs  server.rs  symbol_index.rs  watcher.rs
crates/gozen_lsp/tests/: phase3_queries_test.rs
crates/gozen_parser/: Cargo.toml
crates/gozen_parser/src/: ast.rs  gdscript.rs  gdshader.rs  lib.rs
crates/gozen_project/: Cargo.toml
crates/gozen_project/src/: graph.rs  lib.rs  project_settings.rs  tres.rs  tscn.rs
crates/tree-sitter-gdshader/: Cargo.toml
crates/tree-sitter-gdshader/bindings/rust/: build.rs  lib.rs
examples/: after.gd  before.gd  gozen.json  spatial_shader.gdshader
godot/addons/gozen/: plugin.cfg  plugin.gd
godot/addons/gozen/ui/: gozen_panel.gd  gozen_panel.tscn  settings_dialog.gd  settings_dialog.tscn
src/: lib.rs
tests/: check_test.rs  format_fixtures_test.rs  format_test.rs  lint_fixtures_test.rs  lint_test.rs  styleguide_pending_formatter_test.rs
tests/common/: mod.rs
tests/fixtures/format/basic_function/: input.gd
tests/fixtures/format/indentation_spaces/: config.json  input.gd
tests/fixtures/format/shader_basic/: expected.gdshader  input.gdshader
tests/fixtures/format/styleguide_continuation_indentation_wrapped_condition/: input.gd
tests/fixtures/format/styleguide_crlf_lf_behavior_with_config/: config.json  expected.gd  input.gd
tests/fixtures/format/styleguide_dictionary_brace_spacing/: expected.gd  input.gd
tests/fixtures/format/styleguide_expression_operator_spacing/: expected.gd  input.gd
tests/fixtures/format/styleguide_function_declaration_spacing/: expected.gd  input.gd
tests/fixtures/format/styleguide_no_space_before_call_parens/: expected.gd  input.gd
tests/fixtures/format/styleguide_tabs_indentation/: expected.gd  input.gd
tests/fixtures/format/styleguide_top_level_function_spacing/: expected.gd  input.gd
tests/fixtures/format/styleguide_trailing_comma_behavior/: expected.gd  input.gd
tests/fixtures/format/trailing_commas/: input.gd
tests/fixtures/lint/complexity/: complexity.gd  complexity.gdshader  config.json
tests/fixtures/projects/cross_scene_contracts/: project.godot
tests/fixtures/projects/project_aware_missing/: project.godot
tests/fixtures/shaders/: issues.gdshader  missing_type.gdshader  well_formatted.gdshader
tests/integration/: check_test.rs  format_test.rs  lint_test.rs
vscode-extension/: .vscodeignore  README.md  eslint.config.js  package-lock.json  package.json
vscode-extension/src/: extension.ts
vscode-extension/src/test/: extension.unit.test.ts  smoke.test.ts
(+109 files in other folders)
