[package]
name = "gozen_lsp"
version.workspace = true
edition.workspace = true

[dependencies]
gozen_parser = { path = "../gozen_parser" }
gozen_config = { path = "../gozen_config" }
gozen_formatter = { path = "../gozen_formatter" }
gozen_linter = { path = "../gozen_linter" }
gozen_project = { path = "../gozen_project" }
gozen_diagnostics = { path = "../gozen_diagnostics" }
tower-lsp.workspace = true
tokio.workspace = true
url.workspace = true
anyhow.workspace = true
log.workspace = true
notify.workspace = true