[package]
name = "tree-sitter-gdshader"
description = "Tree-sitter grammar for Godot's GDShader language (vendored)."
version = "0.1.0"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1"

[dev-dependencies]
tree-sitter = "0.24"
